--- a/MusicNotationLib/MusicNotationLib/MusicNotationLib.csproj
+++ b/MusicNotationLib/MusicNotationLib/MusicNotationLib.csproj
@@ -5,4 +5,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Manufaktura.Controls" Version="1.4.2" />
+      <PackageReference Include="Manufaktura.Music" Version="1.1.3" />
+    </ItemGroup>
+
 </Project>
