--- a/Demo/WPFDemo/WPFDemo.csproj
+++ b/Demo/WPFDemo/WPFDemo.csproj
@@ -1,18 +1,27 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
     <PropertyGroup>
-        <OutputType>WinExe</OutputType>
-        <TargetFramework>net48</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <UseWPF>true</UseWPF>
-        <LangVersion>10</LangVersion>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Manufaktura.Controls" Version="1.4.2" />
-      <PackageReference Include="Manufaktura.Controls.WPF" Version="1.4.0" />
-      <PackageReference Include="Manufaktura.Music" Version="1.1.3" />
-    </ItemGroup>
-
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net48</TargetFramework>
+        <RootNamespace>WpfDemo</RootNamespace>
+        <AssemblyName>WpfDemo</AssemblyName>
+		<UseWPF>true</UseWPF>
+		<Platforms>AnyCPU</Platforms>
+		<Platforms>AnyCPU</Platforms>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<Reference Include="System" />
+		<Reference Include="System.Data" />
+		<Reference Include="System.Xml" />
+		<Reference Include="Microsoft.CSharp" />
+		<Reference Include="System.Core" />
+		<Reference Include="System.Xml.Linq" />
+		<Reference Include="System.Data.DataSetExtensions" />
+		<Reference Include="System.Net.Http" />
+		<Reference Include="System.Xaml" />
+		<Reference Include="WindowsBase" />
+		<Reference Include="PresentationCore" />
+		<Reference Include="PresentationFramework" />
+	</ItemGroup>
 </Project>
